# langchain-in-public

./: README.md  main.py  pyproject.toml
.trae/rules/: project_rules.md
rag/: eval_util.py  rag_example.py
